# bb-telegram-analytics-python

./: README.md  pyproject.toml  worldcup+sdk.code-workspace
prompts/: 00_overview.md
prompts/ask/: ask_aiogram3.md  ask_existing_project.md  ask_universal.md
prompts/examples/: event_contract.md  minimal_aiogram_structure.md
prompts/plan/: plan_aiogram3.md  plan_universal.md
prompts/troubleshooting/: docker_networking.md  errors_401_422.md
src/bb_analytics/: __init__.py  client.py  throttle.py  transport.py
