[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bb-telegram-analytics-python"
version = "0.1.0"
description = "SDK для отправки событий в BB API"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
